More Alex Updates

--- a/doc/project.Rmd
+++ b/doc/project.Rmd
@@ -288,10 +288,10 @@ Please fix this Jacob! From, Jacob.
 $$
 \begin{aligned}
 \frac{dR}{dt}=a_r\delta N + \theta_a S_a + \theta_f S_f - k_r R - \alpha R \\
-\frac{dS_f}{dt}=\p_f epsilon_f D \psi -\theta_f S_f - kS_f-\lambda S_f \\
+\frac{dS_f}{dt}=p_f \epsilon_f D \psi -\theta_f S_f - kS_f-\lambda S_f \\
 \frac{dS_a}{dt}=a_s\delta N + \alpha R + p_a \epsilon_a D (1 - \psi) -\theta_a S_a - kS_a-\lambda S_a \\
 \frac{dC}{dt}=a_{c}\delta N + \lambda S_a + \lambda S_f - \phi C- kC \\
-\frac{dD}{dt}=a_d\delta N + \phi C - p_a\epsilon_a D(1 - \psi) - \p_f epsilon_f D \psi - k_dD \\
+\frac{dD}{dt}=a_d\delta N + \phi C - p_a\epsilon_a D(1 - \psi) - p_f \epsilon_f D \psi - k_dD \\
 \lambda=\beta_cC+\beta_dD \\
 N=R+S_f+S_a+C+D
 \end{aligned}
@@ -301,7 +301,7 @@ $$
 
 # Results
 ## Comparison of Baseline Differential Equations
-```{r graphs-1}
+```{r graphs-1, warning=FALSE}
 data.old <- model.old %>% 
     data.frame() %>%
     tbl_df() %>%
@@ -326,13 +326,6 @@ ggplot(bind_rows(data.old, data.new, data.new.valid), aes(x=time, y=size)) +
     facet_wrap(~model)
 ```
 
-```{r graphs-new}
-
-ggplot(data, aes(x=time, y=size)) +
-    geom_line(aes(colour=compartment, linetype=compartment)) +
-    ggtitle("Collapsed Colonized Compartments")
-```
-
 ## Sensitivity Analyses
 Using the Next Generation Matrix derived above, we perform a series
 of analyses to understand the behavior of $R_0$ in this theoretical
@@ -341,7 +334,7 @@ system. For comparison, $R_0$ in @lanzas was estimated to be
 
 ## Simulation
 ```{r simulation-lanzas}
-simulations <- 1e2
+simulations <- 5e2
 
 param <- c(a.r=a.r, a.s=a.s, a.cn=a.cn, a.cp=a.cp, a.d=a.d, alpha=alpha,
            theta=theta, beta.c=beta.c, beta.d=beta.d, f=f, 
@@ -367,7 +360,7 @@ new.attack.rate <- stochastic.sim(param, initial.state,
                                   stochastic.dx.dt.new)
 ```
 
-We ran `r simulations` and we saw an attack rate of 
+We ran `r simulations` simulations and we saw an attack rate of 
 `r lanzas.attack.rate[2]` (95% CI `r lanzas.attack.rate[c(1, 3)]`) and
 `r new.attack.rate[2]` (95% CI `r new.attack.rate[c(1, 3)]`) in the 
 original model and new model respectively.
