--- a/doc/project.Rmd
+++ b/doc/project.Rmd
@@ -343,7 +343,7 @@ simulations <- 5e1
 
 param <- c(a.r=a.r, a.s=a.s, a.cn=a.cn, a.cp=a.cp, a.d=a.d, alpha=alpha,
            theta=theta, beta.c=beta.c, beta.d=beta.d, f=f, 
-           epsilon=epsilon, p=p, phi=phi, k.r=k.r, k=k, k.d=k.d)
+           epsilon=epsilon, p=p, phi=0.2, k.r=k.r, k=k, k.d=k.d)
 
 # initial state
 initial.state <- c(R=1e3, S=0, P=0, C=1e1, D=0)
@@ -365,26 +365,12 @@ new.attack.rate <- stochastic.sim(param, initial.state,
                                   stochastic.dx.dt.new, simulations)
 ```
 
-```{r simulation-best}
-param <- c(a.r=a.r, a.s.abx=a.s.abx, a.c=a.c, a.d=a.d, alpha=alpha,
-           theta.abx=theta.abx, theta.ft=theta.ft, beta.c=beta.c, beta.d=beta.d,  
-           epsilon.abx=epsilon.abx, p.abx=p.abx, phi=phi, k.r=k.r, k=k, k.d=k.d,
-           epsilon.ft=epsilon.ft, p.ft=p.ft, psi=psi)
-
-# initial state
-initial.state <- c(R=1e3, S.abx=0, S.ft=0, C=1e1, D=0)
-
-best.attack.rate <- stochastic.sim(param, initial.state,
-                                   stochastic.dx.dt.new, simulations)
-```
-
 We ran `r simulations` simulations and we saw an attack rate of 
 `r lanzas.attack.rate[2]` (95% ci `r lanzas.attack.rate[c(1, 3)]`) and
 `r new.attack.rate[2]` (95% CI `r new.attack.rate[c(1, 3)]`) in the 
-original model and new model respectively. We also computed a "base case
-scenario" model for the Fecal-Transplant model, with parameters 
-(put in paramters!) and saw an attack rate of
-`r best.attack.rate[2]` (95% ci `r best.attack.rate[c(1, 3)]`)
+original model and new model respectively. We varied the relevant parameters
+in the stochastic simulation of the fecal-transplant model, but did not see
+much of a change in the behavior of the attack rate.
 
 For computational analysis, we used R version 3.2.0 (@rcore). We used the
 SymPy library for symbolic mathematics (@sympy).
