--- a/doc/project.Rmd
+++ b/doc/project.Rmd
@@ -36,6 +36,7 @@ theme_set(theme_classic())
 # programs
 source("../R/model.R")
 source("../R/stochasticModel.R")
+source("../R/calcR0.R")
 ```
 
 ```{r params}
@@ -335,7 +336,46 @@ ggplot(bind_rows(data.old, data.new, data.new.valid), aes(x=time, y=size)) +
 Using the Next Generation Matrix derived above, we perform a series
 of analyses to understand the behavior of $R_0$ in this theoretical
 system. For comparison, $R_0$ in @lanzas was estimated to be 
-0.55 - 1.99 in stochastic simulations.
+0.55 - 1.99 in stochastic simulations. In our model, $R_0$ was estimated to be
+`r calc.R0(30, param)`, using a ward size of 30 which is similar to what was 
+done in @lanzas.
+
+```{r sens-range}
+# orig vals
+psi.old <- param["psi"]
+epsilon.ft.old <- param["epsilon.ft"]
+p.ft.old <- param["p.ft"]
+theta.ft.old <- param["theta.ft"]
+
+print("psi")
+for (psi.temp in c(0, 0.5, 1)) {
+    param["psi"] <- psi.temp
+    print(calc.R0(30, param))
+    param["psi"] <- psi.old
+}
+
+print("ep.f")
+for (ep.temp in c(0.25, 0.5, 1.5, 2.0)) {
+    param["epsilon.ft"] <- ep.temp
+    print(calc.R0(30, param))
+    param["epsilon.ft"] <- epsilon.ft.old
+}
+
+print("p.ft")
+for (p.ft.temp in c(0.5, 1)) {
+    param["p.ft"] <- p.ft.temp
+    print(calc.R0(30, param))
+    param["p.ft"] <- p.ft.old
+}
+
+print("theta.ft")
+for (theta.temp in c(0.063, 1.5, 2.0)) {
+    param["theta.ft"] <- theta.temp
+    print(calc.R0(30, param))
+    param["theta.ft"] <- theta.ft.old
+}
+```
+
 
 ## Simulation
 ```{r simulation-lanzas}
